--- a/index.html
+++ b/index.html
@@ -45,7 +45,17 @@
                 <a href=""><button class="btn-sign-up">Sign Up</button></a>
             </div>
         </nav>
-        
+        <div class="header-container-parent">
+            <div class="header-container">
+                <h2 class="header-container-header">Want anything to be easy with <span
+                        class="header-container-header-child">LaslesVPN.</span></h2>
+                <p class="header-container-description descriptions">Provide a network for all your needs with ease and
+                    fun using LaslesVPN discover interesting features from us.</p>
+            </div>
+            <div class="header-container">
+                <img src="./img/fast-img.png" alt="">
+            </div>
+        </div>
     </header>
     <main>
 
