--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.0.0-beta3/css/all.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
@@ -41,8 +43,8 @@
                 </ul>
             </div>
             <div class="nav-container">
-                <a href=""><button class="btn-sign-in">Sign In</button></a>
-                <a href=""><button class="btn-sign-up">Sign Up</button></a>
+                <a href=""><button type="button" class="btn-sign-in">Sign In</button></a>
+                <a href=""><button type="button" class="btn-sign-up">Sign Up</button></a>
             </div>
         </nav>
         <div class="header-container-parent">
@@ -58,7 +60,38 @@
         </div>
     </header>
     <main>
-
+        <!-- .static-container>.static-item*3>span.static-icon>img.static-image-icon+h2.static-value{90+}+p.static-label{User} -->
+        <!-- static code  -->
+        <div class="static-container">
+            <div class="static-item">
+                <span class="static-icon">
+                    <a href=""><img src="./img/icon/user.png" alt="" class="static-image-icon"></a>
+                </span>
+                <span class="static-text">
+                    <h2 class="static-value">90+</h2>
+                    <p class="static-label">Users</p>
+                </span>
+            </div>
+            <div class="static-item">
+                <span class="static-icon">
+                    <a href=""><img src="/img/icon/loctions.png" alt="" class="static-image-icon"></a>
+                </span>
+                <span class="static-text">
+                    <h2 class="static-value">30+</h2>
+                    <p class="static-label">Locations</p>
+                </span>
+            </div>
+            <div class="static-item">
+                <span class="static-icon">
+                    <a href=""><img src="./img/icon/services.png" alt="" class="static-image-icon"></a>
+                </span>
+                <span class="static-text">
+                    <h2 class="static-value">50+</h2>
+                    <p class="static-label">Servers</p>
+                </span>
+            </div>
+        </div>
+        <!-- static code end -->
     </main>
     <footer>
 
