--- a/index.html
+++ b/index.html
@@ -92,6 +92,37 @@
             </div>
         </div>
         <!-- static code end -->
+        <!-- feature code  -->
+        <div class="feature-container">
+            <div class="illustration feature">
+                <img src="./img/2nd-img.png" alt="" class="illustration-image">
+            </div>
+            <div class="feature">
+                <h2 class="feature-header">We Provide Many Features You Can Use</h2>
+                <p class="feature-description">
+                    You can explore the features that we provide with fun and have their own functions each feature.
+                </p>
+                <ul class="feature-item">
+                    <li class="feature-item-list">
+                        <img src="./img/icon/done-icon.png" alt="" class="feature-right-img">
+                        <p class="feature-item-description">Powerfull online protection.</p>
+                    </li>
+                    <li class="feature-item-list">
+                        <img src="./img/icon/done-icon.png" alt="" class="feature-right-img">
+                        <p class="feature-item-description">Internet without borders.</p>
+                    </li>
+                    <li class="feature-item-list">
+                        <img src="./img/icon/done-icon.png" alt="" class="feature-right-img">
+                        <p class="feature-item-description">Supercharged VPN</p>
+                    </li>
+                    <li class="feature-item-list">
+                        <img src="./img/icon/done-icon.png" alt="" class="feature-right-img">
+                        <p class="feature-item-description">No specific time limits.</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- featured code end  -->
     </main>
     <footer>
 
