added feature and card plan

--- a/index.html
+++ b/index.html
@@ -123,6 +123,96 @@
             </div>
         </div>
         <!-- featured code end  -->
+        <!-- Section code  -->
+        <div class="sections-container-parent">
+            <h2 class="title section-heading">Choose Your Plan </h2>
+            <p class="subtitle description">
+                Let's choose the package that is best for you and explore it happily and cheerfully.
+            </p>
+        </div>
+        <!-- section code end -->
+        <!-- plan code  -->
+        <div class="plan-card-container">
+            <div class="plan-card">
+                <img src="./img/Free.png" alt="" class="card-icon">
+                <h2 class="card-title">Free Plan</h2>
+                <ul class="plan-item">
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Unlimited Bandwitch</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Encrypted Connection</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">No Traffic Logs</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Works on All Devices</p>
+                    </li>
+                </ul>
+                <span class="plan-price"></span>
+            </div>
+            <div class="plan-card">
+                <img src="./img/plan-2.png" alt="" class="card-icon">
+                <h2 class="card-title">Standard Plan</h2>
+                <ul class="plan-item">
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Unlimited Bandwitch</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Encrypted Connection</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Yes Traffic Logs</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Works on All Devices</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Connect Anyware</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="plan-card">
+                <img src="./img/Premium.png" alt="" class="card-icon">
+                <h2 class="card-title">Premium Plan</h2>
+                <ul class="plan-item">
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Unlimited Bandwitch</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Encrypted Connection</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Yes Traffic Logs</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Works on All Devices</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Connect Anyware</p>
+                    </li>
+                    <li class="plan-features">
+                        <img src="./img/icon/done-checkmark.png" alt="" class="plan-features-icon">
+                        <p class="plan-features-descriptions">Get New Features</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </main>
     <footer>
 
