--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="static-item">
                 <span class="static-icon">
-                    <a href=""><img src="/img/icon/loctions.png" alt="" class="static-image-icon"></a>
+                    <a href=""><img src="./img/icon/loctions.png" alt="" class="static-image-icon"></a>
                 </span>
                 <span class="static-text">
                     <h2 class="static-value">30+</h2>
