added global container

--- a/index.html
+++ b/index.html
@@ -224,6 +224,16 @@
                 </div>
             </div>
         </div>
+        <div class="sections-container-parent" id="global-net">
+            <h2 class="title section-heading">Huge Global Network of Fast VPN</h2>
+            <p class="subtitle description">
+                See <span class="global-descripts">LaslesVPN</span> everywhere to make it easier for you when you move locations.
+            </p>
+        </div>
+        <div class="map-container">
+            <img class="map-image" src="./img/map.png" alt="">
+        </div>
+        <div class="brand-icon-container"><a href=""><img src="" alt="" class="brand-icon"></a><a href=""><img src="" alt="" class="brand-icon"></a><a href=""><img src="" alt="" class="brand-icon"></a><a href=""><img src="" alt="" class="brand-icon"></a><a href=""><img src="" alt="" class="brand-icon"></a></div>
     </main>
     <footer>
 
