--- a/index.html
+++ b/index.html
@@ -236,20 +236,26 @@
         </div>
         <div class="brand-icon-container">
             <a href="">
-                <img src="" alt="" class="brand-icon">
+                <img src="./img/icon/socle-icon/netflex.png" alt="" class="brand-icon">
             </a>
             <a href="">
-                <img src="" alt="" class="brand-icon">
+                <img src="./img/icon/socle-icon/reddit.png" alt="" class="brand-icon">
             </a>
             <a href="">
-                <img src="" alt="" class="brand-icon">
+                <img src="img/icon/socle-icon/amagon.png" alt="" class="brand-icon">
             </a>
             <a href="">
-                <img src="" alt="" class="brand-icon">
+                <img src="/img/icon/socle-icon/spot.png" alt="" class="brand-icon">
             </a>
             <a href="">
-                <img src="" alt="" class="brand-icon">
+                <img src="./img/icon/socle-icon/discord.png" alt="" class="brand-icon">
             </a>
+        </div>
+        <div class="sections-container-parent trast-container" id="trast-container-parent">
+            <h2 class="title section-heading trast-heading">Trusted by Thousands of Happy Customer</h2>
+            <p class="subtitle description trast-description">
+                These are the stories of our customers who have joined us with great pleasure when using this crazy feature.
+            </p>
         </div>
     </main>
     <footer>
