--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <img src="./img/icon/socle-icon/discord.png" alt="" class="brand-icon">
             </a>
         </div>
-        <div class="sections-container-parent trast-container" id="trast-container-parent">
+        <div class="sections-container-parent trasted-container" id="trast-container-parent">
             <h2 class="title section-heading trast-heading">Trusted by Thousands of Happy Customer</h2>
             <p class="subtitle description trast-description">
                 These are the stories of our customers who have joined us with great pleasure when using this crazy feature.
