--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <header>
         <nav class="nav-container">
             <div class="logo-container">
-                <img src="./img/logo-icon.png" alt="">
-                <span class="text-logo">Lasles<span class="logo-child-vpn">VPN</span></span>
+                <a href="">
+                    <img src="./img/logo-icon.png" alt="">
+                    <span class="text-logo">Lasles<span class="logo-child-vpn">VPN</span></span>
+                </a>
             </div>
             <div class="nav-container">
                 <ul class="nav-ul-container">
@@ -254,7 +256,8 @@
         <div class="sections-container-parent trasted-container" id="trast-container-parent">
             <h2 class="title section-heading trast-heading">Trusted by Thousands of Happy Customer</h2>
             <p class="subtitle description trast-description">
-                These are the stories of our customers who have joined us with great pleasure when using this crazy feature.
+                These are the stories of our customers who have joined us with great pleasure when using this crazy
+                feature.
             </p>
         </div>
     </main>
