--- a/index.html
+++ b/index.html
@@ -237,19 +237,19 @@
             <img class="map-image" src="./img/map.png" alt="">
         </div>
         <div class="brand-icon-container">
-            <a href="">
+            <a href="https://www.netflix.com/bd/" target="_blank">
                 <img src="./img/icon/socle-icon/netflex.png" alt="" class="brand-icon">
             </a>
-            <a href="">
+            <a href="https://www.reddit.com/?rdt=64688" target="_blank">
                 <img src="./img/icon/socle-icon/reddit.png" alt="" class="brand-icon">
             </a>
-            <a href="">
+            <a href="https://www.amazon.com/" target="_blank">
                 <img src="img/icon/socle-icon/amagon.png" alt="" class="brand-icon">
             </a>
-            <a href="">
+            <a href="https://open.spotify.com/" target="_blank">
                 <img src="/img/icon/socle-icon/spot.png" alt="" class="brand-icon">
             </a>
-            <a href="">
+            <a href="https://discord.com/" target="_blank">
                 <img src="./img/icon/socle-icon/discord.png" alt="" class="brand-icon">
             </a>
         </div>
@@ -259,6 +259,13 @@
                 These are the stories of our customers who have joined us with great pleasure when using this crazy
                 feature.
             </p>
+        </div>
+        <div class="review-container">
+            <div class="review-card">
+                <img src="" alt="" class="reviewer-photo">
+                <h2 class="reviewer-name"></h2>
+                <p class="reviewer-location"></p>
+            </div>
         </div>
     </main>
     <footer>
