--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <img src="img/icon/socle-icon/amagon.png" alt="" class="brand-icon">
             </a>
             <a href="https://open.spotify.com/" target="_blank">
-                <img src="/img/icon/socle-icon/spot.png" alt="" class="brand-icon">
+                <img src="./img/icon/socle-icon/spot.png" alt="" class="brand-icon">
             </a>
             <a href="https://discord.com/" target="_blank">
                 <img src="./img/icon/socle-icon/discord.png" alt="" class="brand-icon">
