--- a/index.html
+++ b/index.html
@@ -400,16 +400,16 @@
                 <div class="review-card-child">
                     <span class="review-child">
 
-                        <img src="./img/reviewer-1.jpg" alt="" class="reviewer-photo">
+                        <img src="./img/seam vai.jpg" alt="" class="reviewer-photo">
 
                     </span>
                     <span class="review-child">
                         <a href="">
-                            <h2 class="reviewer-name">Viezh Robert</h2>
+                            <h2 class="reviewer-name">Seam</h2>
                         </a>
                         <a
                             href="https://www.google.com/maps/place/The+Royal+Castle+in+Warsaw/@52.2479748,21.0140023,173m/data=!3m1!1e3!4m15!1m8!3m7!1s0x471ecc669a869f01:0x72f0be2a88ead3fc!2sWarsaw,+Poland!3b1!8m2!3d52.2296756!4d21.0122287!16zL20vMDgxbV8!3m5!1s0x471ecc661b455407:0x2019a146fb49c9be!8m2!3d52.2477436!4d21.0141275!16zL20vMDNrM3M3?entry=ttu&g_ep=EgoyMDI0MTEwNi4wIKXMDSoASAFQAw%3D%3D" target="_blank">
-                            <p class="reviewer-location">Warsaw, Poland</p>
+                            <p class="reviewer-location">Dhaka-shamoly</p>
                         </a>
                     </span>
                     <span class="review-child">
