--- a/index.html
+++ b/index.html
@@ -696,19 +696,68 @@
     </main>
     <!-- main code end  -->
     <footer>
-        <div class="footer-section">
-            <div class="logo-container footer-logo">
-                <a href="https://alamin-02.github.io/lasles-vpn/">
-                    <img src="./img/logo-icon.png" alt="">
-                    <span class="text-logo">Lasles<span class="logo-child-vpn">VPN</span></span>
-                </a>
+        <div class="footer-container">
+            <div class="footer-section">
+                <div class="logo-container footer-logo">
+                    <a href="https://alamin-02.github.io/lasles-vpn/">
+                        <img src="./img/logo-icon.png" alt="">
+                        <span class="text-logo">Lasles<span class="logo-child-vpn">VPN</span></span>
+                    </a>
+                </div>
+                <p class="subtitle description footer-descriptions">
+                    <span class="global-descripts">LaslesVPN</span> is a private virtual network that has unique features
+                    and has high security.
+                </p>
+                <ul class="footer-socale-icon">
+                    <a href="">
+                        <li>
+                            <img class="footer-socale-icon-img" src="./img/icon/socle-icon/facebook.png" alt="">
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img class="footer-socale-icon-img" src="./img/icon/socle-icon/twiter.png" alt="">
+                        </li>
+                    </a>
+                    <a href="">
+                        <li>
+                            <img class="footer-socale-icon-img" src="./img/icon/socle-icon/instargram.png" alt="">
+                        </li>
+                    </a>
+                </ul>
+                <p class="copy-right-simble">&copy;2020LaslesVPN</p>
             </div>
-            <p class="subtitle description footer-descriptions">
-                <span class="global-descripts">LaslesVPN</span> is a private virtual network that has unique features and has high security.
-            </p>
-            <p>&copy;2020LaslesVPN</p>
+            <div class="footer-section footer-column-container">
+                <div class="footer-column">
+                    <h4 class="footer-column-header">Product</h4>
+                    <a href=""><p class="footer-column-child">Download </p></a>
+                    <a href=""><p class="footer-column-child">Pricing</p></a>
+                    <a href=""><p class="footer-column-child">Locations</p></a>
+                    <a href=""><p class="footer-column-child">Server</p></a>
+                    <a href=""><p class="footer-column-child">Countries</p></a>
+                    <a href=""><p class="footer-column-child">Blog</p></a>
+                    <a href=""><p class="footer-column-child"></p></a>
+                </div>
+                <div class="footer-column">
+                    <h4 class="footer-column-header">Engage</h4>
+                    <a href=""><p class="footer-column-child">LaslesVPN ? </p></a>
+                    <a href=""><p class="footer-column-child">FAQ</p></a>
+                    <a href=""><p class="footer-column-child">Tutorials</p></a>
+                    <a href=""><p class="footer-column-child">About Us</p></a>
+                    <a href=""><p class="footer-column-child">Privacy Policy</p></a>
+                    <a href=""><p class="footer-column-child">Terms of Service</p></a>
+                    <a href=""><p class="footer-column-child"></p></a>
+                </div>
+                <div class="footer-column">
+                    <h4 class="footer-column-header">Earn Money</h4>
+                    <a href=""><p class="footer-column-child">Affiliate</p></a>
+                    <a href=""><p class="footer-column-child">Become Partner</p></a>
+                    <a href=""><p class="footer-column-child"></p></a>
+                    <a href=""><p class="footer-column-child"></p></a>
+    
+                </div>
+            </div>
         </div>
-        <div class="footer-section"></div>
     </footer>
 
 
