--- a/index.html
+++ b/index.html
@@ -709,17 +709,17 @@
                     and has high security.
                 </p>
                 <ul class="footer-socale-icon">
-                    <a href="">
+                    <a href="https://www.facebook.com/">
                         <li>
                             <img class="footer-socale-icon-img" src="./img/icon/socle-icon/facebook.png" alt="">
                         </li>
                     </a>
-                    <a href="">
+                    <a href="https://x.com/">
                         <li>
                             <img class="footer-socale-icon-img" src="./img/icon/socle-icon/twiter.png" alt="">
                         </li>
                     </a>
-                    <a href="">
+                    <a href="https://www.instagram.com/">
                         <li>
                             <img class="footer-socale-icon-img" src="./img/icon/socle-icon/instargram.png" alt="">
                         </li>
